--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,10 @@
+<!--
+ * @Description: 
+ * @Author: LLiuHuan
+ * @Date: 2021-02-17 19:13:28
+ * @LastEditTime: 2021-02-17 21:12:02
+ * @LastEditors: LLiuHuan
+-->
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -6,6 +13,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="//at.alicdn.com/t/font_2288564_eamztjqip5.js"></script>
   </head>
   <body>
     <noscript>
